[gd_scene load_steps=14 format=3 uid="uid://deu4nwi50s2ce"]

[ext_resource type="Script" path="res://script/IngameButton.gd" id="1_3n6ue"]
[ext_resource type="PackedScene" uid="uid://dti5l02a82wpr" path="res://scene/levels/Bg.tscn" id="2_3et1o"]
[ext_resource type="FontFile" uid="uid://d1y1i3mcyceu" path="res://assets/fonts/Pixelme.ttf" id="2_yfbby"]
[ext_resource type="Texture2D" uid="uid://bnxq8m651px2" path="res://assets/gui/IDLE/LEFT MOVEMENT.png" id="3_5g7ca"]
[ext_resource type="Texture2D" uid="uid://73wufg0fmts7" path="res://assets/gui/PRESSED/LEFT MOVEMENT.png" id="4_whqf5"]
[ext_resource type="Texture2D" uid="uid://dy43jafwbxidp" path="res://assets/gui/IDLE/RIGHT MOVEMENT.png" id="5_lnmq1"]
[ext_resource type="Texture2D" uid="uid://cgxcxln7wrxm4" path="res://assets/gui/PRESSED/RIGHT MOVEMENT.png" id="6_a6x84"]
[ext_resource type="Texture2D" uid="uid://cpqnabvuho0n" path="res://assets/gui/IDLE/UP MOVEMENT.png" id="7_sukb5"]
[ext_resource type="Texture2D" uid="uid://c0lyh1koh7dgc" path="res://assets/gui/PRESSED/UP MOVEMENT.png" id="8_t04kx"]
[ext_resource type="Texture2D" uid="uid://bi3ugun0nnjlc" path="res://assets/gui/IDLE/Pick.png" id="9_uvnw1"]
[ext_resource type="Texture2D" uid="uid://dffq6wre2hdfa" path="res://assets/gui/PRESSED/Drop.png" id="10_i6niu"]
[ext_resource type="Texture2D" uid="uid://dxxvxfqudy7iq" path="res://assets/gui/IDLE/Pause.png" id="11_4nop3"]
[ext_resource type="Texture2D" uid="uid://cg2exgwmh3bd2" path="res://assets/gui/PRESSED/Pause.png" id="12_yom15"]

[node name="IngameButtons" type="CanvasLayer"]
script = ExtResource("1_3n6ue")
metadata/_edit_horizontal_guides_ = [376.0]

[node name="ParallaxBackground" parent="." instance=ExtResource("2_3et1o")]
process_mode = 2
visible = false

[node name="Left" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 312.0
offset_right = 80.0
offset_bottom = 376.0
action_mode = 0
texture_normal = ExtResource("3_5g7ca")
texture_pressed = ExtResource("4_whqf5")
ignore_texture_size = true
stretch_mode = 0

[node name="Right" type="TextureButton" parent="."]
offset_left = 96.0
offset_top = 312.0
offset_right = 160.0
offset_bottom = 376.0
action_mode = 0
texture_normal = ExtResource("5_lnmq1")
texture_pressed = ExtResource("6_a6x84")
ignore_texture_size = true
stretch_mode = 0

[node name="Jump" type="TextureButton" parent="."]
offset_left = 720.0
offset_top = 312.0
offset_right = 784.0
offset_bottom = 376.0
action_mode = 0
texture_normal = ExtResource("7_sukb5")
texture_pressed = ExtResource("8_t04kx")
ignore_texture_size = true
stretch_mode = 0

[node name="Pick" type="TextureButton" parent="."]
offset_left = 640.0
offset_top = 312.0
offset_right = 704.0
offset_bottom = 376.0
action_mode = 0
texture_normal = ExtResource("9_uvnw1")
texture_pressed = ExtResource("9_uvnw1")
ignore_texture_size = true
stretch_mode = 0

[node name="Drop" type="TextureButton" parent="."]
visible = false
offset_left = 640.0
offset_top = 312.0
offset_right = 704.0
offset_bottom = 376.0
action_mode = 0
texture_normal = ExtResource("10_i6niu")
texture_pressed = ExtResource("10_i6niu")
ignore_texture_size = true
stretch_mode = 0

[node name="Pause" type="TextureButton" parent="."]
offset_left = 728.0
offset_top = 8.0
offset_right = 792.0
offset_bottom = 72.0
action_mode = 0
texture_normal = ExtResource("11_4nop3")
texture_pressed = ExtResource("12_yom15")
ignore_texture_size = true
stretch_mode = 0

[node name="Popup" type="Popup" parent="."]
process_mode = 2
canvas_item_default_texture_filter = 0
size = Vector2i(800, 400)

[node name="ParallaxBackground2" parent="Popup" instance=ExtResource("2_3et1o")]
process_mode = 2
move = true

[node name="ColorRect3" type="ColorRect" parent="Popup"]
clip_contents = true
custom_minimum_size = Vector2(300, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.145098, 0.435294, 0)

[node name="TextureButton" type="TextureButton" parent="Popup/ColorRect3"]
custom_minimum_size = Vector2(249, 400)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="Popup"]
clip_contents = true
custom_minimum_size = Vector2(360, 380)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -190.0
offset_right = 180.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.482353, 1, 0.388235)

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/ColorRect2"]
custom_minimum_size = Vector2(325, 300)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.5
offset_right = 55.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Popup/ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yfbby")
theme_override_font_sizes/font_size = 60
text = "paused"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="Master" type="CheckButton" parent="Popup/ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Mute All"

[node name="Music" type="CheckButton" parent="Popup/ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Mute Music"

[node name="Sfx" type="CheckButton" parent="Popup/ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Mute SFX"

[node name="mainmenu" type="Button" parent="Popup/ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yfbby")
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="Label2" type="Label" parent="Popup/ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Touch outside the box to Unpause"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="button_down" from="Left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="Jump" to="." method="_on_jump_button_down"]
[connection signal="button_up" from="Jump" to="." method="_on_jump_button_up"]
[connection signal="pressed" from="Pick" to="." method="_on_pick_pressed"]
[connection signal="pressed" from="Drop" to="." method="_on_drop_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Popup/ColorRect3/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="toggled" from="Popup/ColorRect2/VBoxContainer/Master" to="." method="_on_master_toggled"]
[connection signal="toggled" from="Popup/ColorRect2/VBoxContainer/Music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="Popup/ColorRect2/VBoxContainer/Sfx" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="Popup/ColorRect2/VBoxContainer/mainmenu" to="." method="_on_mainmenu_pressed"]
